[package]
name = "simple-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.10.0"
chrono = "0.4.19"
crossterm = "0.22.1"
hex-literal = "0.3.4"
rand = "0.6.5" # https://github.com/rust-bitcoin/rust-secp256k1/issues/328
sha2 = "0.10.0"

[dependencies.secp256k1]
features = ["rand", "bitcoin_hashes"]
version = "0.20.3"
